# CytoNormPy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
cytonormpy/: __init__.py  _utils.py
cytonormpy/_clustering/: __init__.py  _cluster_algorithms.py
cytonormpy/_cytonorm/: __init__.py  _cytonorm.py  _evaluation.py  _examples.py  _utils.py
cytonormpy/_dataset/: __init__.py  _dataprovider.py  _datareader.py  _dataset.py  _fcs_file.py
cytonormpy/_evaluation/: __init__.py  _emd.py  _emd_utils.py  _mad.py  _mad_utils.py  _utils.py
cytonormpy/_normalization/: __init__.py  _quantile_calc.py  _spline_calc.py  _utils.py
cytonormpy/_plotting/: __init__.py  _plotter.py
cytonormpy/_resources/: Norm_Gates_PTLG021_Unstim_Control_2.fcs  Norm_Gates_PTLG028_Unstim_Control_2.fcs  Norm_Gates_PTLG034_Unstim_Control_2.fcs  coding_detectors.txt  metadata.csv  metadata.xlsx  metadata_sid.csv  test_adata.h5ad
cytonormpy/_transformation/: __init__.py  _transformations.py
cytonormpy/_utils/: _utils.py
cytonormpy/tests/: conftest.py  test_anndata_data_handler.py  test_anndata_datahandler.py  test_cytonorm.py  test_data_precision.py  test_datahandler.py  test_dataprovider.py  test_datareader.py  test_emd.py  test_fcs_data_handler.py  test_io.py  test_mad.py  test_normalization_utils.py  test_quantile_calc.py  test_splinefunc.py  test_transformers.py  test_utils.py
cytonormpy/vignettes/: cytonormpy_anndata.ipynb  cytonormpy_fcs.ipynb  cytonormpy_plotting.ipynb
docs/: conf.py  index.md  installation.md  references.bib
docs/private/: datahandler.md  dataprovider.md  index.md  quantiles.md  splines.md  warnings.md
docs/public/: clusterers.md  cytonorm.md  index.md  plotter.md  transformers.md
docs/vignettes/: cnp_anndata.nblink  cnp_fcs_file.nblink  cnp_plotting.nblink  index.md
