[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytonormpy"
version = "0.0.4"
authors = [
  { name="Tarik Exner", email="Tarik.Exner@med.uni-heidelberg.de" },
]
description = "CytoNorm for python"
readme = "README.md"
requires-python = ">=3.9"
repository = "http://github.com/TarikExner/CytoNormPy/"
keywords = ["batch", "cytometry", "cytonorm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata",
    "numpy",
    "scipy",
    "pandas",
    "flowio",
    "flowutils",
    "flowsom@git+https://github.com/saeyslab/FlowSOM_Python"
]

[project.optional-dependencies]
docs = [
    "sphinx<=7.4",
    "sphinx-book-theme>=1.0.0",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "nbsphinx-link",
    "pandoc",
    "myst_parser",
    "docutils<=0.20",
    "ipython"
]
test = [
    "pytest",
    "pytest-cov"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "http://github.com/TarikExner/CytoNormPy/"
"Bugtracker" = "http://github.com/TarikExner/CytoNormPy/"
